# apps/server/docs/swagger.json
@@ -339,83 +339,6 @@
                 }
             }
         },
-        "/badge/{monitorId}/avg-response/{duration}": {
-            "get": {
-                "produces": [
-                    "image/svg+xml"
-                ],
-                "tags": [
-                    "Badges"
-                ],
-                "summary": "Get average response time badge",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Monitor ID",
-                        "name": "monitorId",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Duration in hours",
-                        "name": "duration",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Badge style",
-                        "name": "style",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Custom label",
-                        "name": "label",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Value suffix",
-                        "name": "suffix",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Badge color",
-                        "name": "color",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "SVG badge",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/utils.APIError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/utils.APIError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/utils.APIError"
-                        }
-                    }
-                }
-            }
-        },
         "/badge/{monitorId}/cert-exp": {
             "get": {
                 "produces": [
